@@ -2,6 +2,14 @@ $Id$
 
 v0.61.0		06-Jun-2004.
 
+	mbmsg:
+		With te post command, the right number of commandline options
+		is checked, if this is wrong the help message is displayed.
+		If a message is posted in a local area, no echomail.jam is
+		updated and the mailout semafore is not set.
+		Added checks in the mbmsg post command if the To parameter has
+		the correct syntax for netmail and all other areas.
+
 
 v0.60.0         09-Feb-2004 - 04-Jun-2004
 
